--- a/revsistematica.tex
+++ b/revsistematica.tex
@@ -11,8 +11,20 @@ Neste capítulo são apresentados os ?? e resultados da revisão bibliográfica.
 
 
 \section{Metodologia}
-% coisas comuns às revisões
+% coisas comuns às três revisões
 
+Visando artigos recentes, com alguma garantia de qualidade
+Scopus-Ciências físicas (7.200 publicações)- base de acesso restrito, foram selecionados apenas artigos dos últimos quatro anos (141), devido ao grande número de resultados (944)
+ACM (411.762 publicações próprias e de afiliados) - base com poucos resultados (57)
+
+Visando artigos influentes, ou seja, com muitas citações.
+Artigos muito recentes ficam naturalmente excluídos por tenderem a ter menos citações -
+exceto artigos recentes de alto impacto.
+Google Acadêmico-Computação (5.350.000 publicações) - (19700) Foram selecionados apenas os artigos com mais de 25 citações na ordem de relevância determinada pelo critério interno do Google (130)
+IEEE (3.748.954 publicações) - (382) Foram selecionados apenas os 50 artigos mais citados, o que equivale a artigos com mais de quatro citações
+
+A literatura de aprendizado ativo normalmente deixa o cenário baseado em pool implícito.
+Por isso, é necessário excluir os outros cenários na consulta.
 
 \section{Aprendizado Ativo}
 Não é do conhecimento do autor nenhuma revisão sistemática sobre aprendizado ativo,
