--- a/revsistematica.tex
+++ b/revsistematica.tex
@@ -14,14 +14,16 @@ Neste capítulo são apresentados os ?? e resultados da revisão bibliográfica.
 % coisas comuns às três revisões
 
 Visando artigos recentes, com alguma garantia de qualidade
-Scopus-Ciências físicas (7.200 publicações)- base de acesso restrito, foram selecionados apenas artigos dos últimos quatro anos (141), devido ao grande número de resultados (944)
-ACM (411.762 publicações próprias e de afiliados) - base com poucos resultados (57)
-
+Scopus-Ciências físicas (7.200 publicações)- base de acesso restrito, foram selecionados apenas artigos dos últimos quatro anos (140/141), devido ao grande número de resultados (944)
+ACM (411.762 publicações próprias e de afiliados) - base com poucos resultados (57/57)
+Springer-Computação (3.321) ALcomAcessoAoPDF(21)
 Visando artigos influentes, ou seja, com muitas citações.
 Artigos muito recentes ficam naturalmente excluídos por tenderem a ter menos citações -
 exceto artigos recentes de alto impacto.
-Google Acadêmico-Computação (5.350.000 publicações) - (19700) Foram selecionados apenas os artigos com mais de 25 citações na ordem de relevância determinada pelo critério interno do Google (130)
-IEEE (3.748.954 publicações) - (382) Foram selecionados apenas os 50 artigos mais citados, o que equivale a artigos com mais de quatro citações
+Google Acadêmico-Computação (5.350.000 publicações) - (19700) Foram selecionados apenas os artigos com mais de 25 citações na ordem de relevância determinada pelo critério interno do Google (121/130)
+IEEE (3.748.954 publicações) - (382) Foram selecionados apenas os 48/50 artigos mais citados, o que equivale a artigos com mais de quatro citações
+
+10 duplicados foram encontrados automaticamente
 
 A literatura de aprendizado ativo normalmente deixa o cenário baseado em pool implícito.
 Por isso, é necessário excluir os outros cenários na consulta.
@@ -29,7 +31,9 @@ Por isso, é necessário excluir os outros cenários na consulta.
 \section{Aprendizado Ativo}
 Não é do conhecimento do autor nenhuma revisão sistemática sobre aprendizado ativo,
 porém existem revisões convencionais sobre os diferentes cenários e estratégias.
-Tais revisões são usadas para complementar a revisão sistemática.
+Tais revisões são usadas para complementar a revisão sistemática ??.
+
+Primário: fazer uma prospecção da área em busca das estratégias existentes para o cenário baseado em banco de exemplos (pool-based) com oráculo único, consistente e os exemplos têm custos uniformes com distribuição estacionária.
 
 % mapeamento sistemáticos empregados nesta tese.
 % Esses procedimentos visam a replicabilidade e não-enviesamento só isso?? da
