selecionando e adicionando abstracts

--- a/revsistematica.tex
+++ b/revsistematica.tex
@@ -9,6 +9,44 @@ enquanto que, para engenharia de \textit{software}, há 203.
 
 Neste capítulo são apresentados os ?? e resultados da revisão bibliográfica.
 
+questões que me vieram à mente trabalhando na área:
+Que garantias existem de que uma estratégia de aprendizado ativo é economicamente viável?
+# Essa questão me interessa porque ela põe em cheque a real utilidade de AL.
+   Elas são significativamente melhores do que a amostragem aleatória?
+   Em que situações o desempenho é pior?
+   Quando a variabilidade no desempenho se torna um risco para o orçamento?
+# Há teoria de algumas estratégias no que diz respeito a se ter garantias de não ser pior do que aleatório.
+# A melhor maneira de averiguar esses pontos é por meio de experimentação.
+# Trata-se de um problema extremamente relevante.
+
+As estratégias da literatura são usadas na prática?
+Há algoritmos de aprendizado mais adequados do que outros para aprendizado ativo?
+É possível ter uma estratégia boa para qualquer algoritmo de aprendizado? Senão, como escolher?
+É possível ter uma estratégia boa para qualquer domínio de aplicação? Senão, como escolher?
+As estratégias existentes são viáveis para interação com o usuário em tempo real?
+Quais são as estratégias de aprendizado ativo mais relevantes?
+Quais são os principais paradigmas em que as estratégias se agrupam?
+
+background
+
+propósito/objs - apresentar evidencias
+
+inc/exc criterios
+
+search strat
+
+how will be setlected
+
+how assesssd
+
+como extrair dados
+
+
+titulo, onj e questao devem dizer a mesma coisa
+
+
+sinonimos - existem termos equivalentes, mas pertencentes a outras areas.
+
 
 \section{Metodologia}
 % coisas comuns às três revisões
