--- a/revsistematica.tex
+++ b/revsistematica.tex
@@ -48,6 +48,7 @@ titulo, onj e questao devem dizer a mesma coisa
 sinonimos - existem termos equivalentes, mas pertencentes a outras areas.
 
 
+temas recorrentes: desbalanceamento
 \section{Metodologia}
 % coisas comuns às três revisões
 
