--- a/revsistematica.tex
+++ b/revsistematica.tex
@@ -72,7 +72,7 @@ Não é do conhecimento do autor nenhuma revisão sistemática sobre aprendizado ati
 porém existem revisões convencionais sobre os diferentes cenários e estratégias.
 Tais revisões são usadas para complementar a revisão sistemática ??.
 
-Primário: fazer uma prospecção da área em busca das estratégias existentes para o cenário baseado em banco de exemplos (pool-based) uma-query-por-vez monorótulo, com oráculo único, consistente e os exemplos têm custos uniformes com distribuição estacionária.
+Primário: fazer uma prospecção da área em busca das estratégias existentes para o cenário baseado em banco de exemplos (pool-based) uma-query-por-vez-e-a-respeito-da-classe monorótulo, com oráculo único, consistente e os exemplos têm custos uniformes com distribuição estacionária.
 
 % mapeamento sistemáticos empregados nesta tese.
 % Esses procedimentos visam a replicabilidade e não-enviesamento só isso?? da
