--- a/revsistematica.tex
+++ b/revsistematica.tex
@@ -9,19 +9,60 @@ enquanto que, para engenharia de \textit{software}, há 203.
 
 Neste capítulo são apresentados os ?? e resultados da revisão bibliográfica.
 
+questões que me vieram à mente trabalhando na área:
+Que garantias existem de que uma estratégia de aprendizado ativo é economicamente viável?
+# Essa questão me interessa porque ela põe em cheque a real utilidade de AL.
+   Elas são significativamente melhores do que a amostragem aleatória?
+   Em que situações o desempenho é pior?
+   Quando a variabilidade no desempenho se torna um risco para o orçamento?
+# Há teoria de algumas estratégias no que diz respeito a se ter garantias de não ser pior do que aleatório.
+# A melhor maneira de averiguar esses pontos é por meio de experimentação.
+# Trata-se de um problema extremamente relevante.
 
+As estratégias da literatura são usadas na prática?
+Há algoritmos de aprendizado mais adequados do que outros para aprendizado ativo?
+É possível ter uma estratégia boa para qualquer algoritmo de aprendizado? Senão, como escolher?
+É possível ter uma estratégia boa para qualquer domínio de aplicação? Senão, como escolher?
+As estratégias existentes são viáveis para interação com o usuário em tempo real?
+Quais são as estratégias de aprendizado ativo mais relevantes?
+Quais são os principais paradigmas em que as estratégias se agrupam?
+
+background
+
+propósito/objs - apresentar evidencias
+
+inc/exc criterios
+
+search strat
+
+how will be setlected
+
+how assesssd
+
+como extrair dados
+
+
+titulo, onj e questao devem dizer a mesma coisa
+
+
+sinonimos - existem termos equivalentes, mas pertencentes a outras areas.
+
+
+temas recorrentes: desbalanceamento
 \section{Metodologia}
 % coisas comuns às três revisões
 
 Visando artigos recentes, com alguma garantia de qualidade
-Scopus-Ciências físicas (7.200 publicações)- base de acesso restrito, foram selecionados apenas artigos dos últimos quatro anos (141), devido ao grande número de resultados (944)
-ACM (411.762 publicações próprias e de afiliados) - base com poucos resultados (57)
-
+Scopus-Ciências físicas (7.200 publicações)- base de acesso restrito, foram selecionados apenas artigos dos últimos quatro anos (140/141), devido ao grande número de resultados (944)
+ACM (411.762 publicações próprias e de afiliados) - base com poucos resultados (57/57)
+Springer-Computação (3.321) ALcomAcessoAoPDF(21)
 Visando artigos influentes, ou seja, com muitas citações.
 Artigos muito recentes ficam naturalmente excluídos por tenderem a ter menos citações -
 exceto artigos recentes de alto impacto.
-Google Acadêmico-Computação (5.350.000 publicações) - (19700) Foram selecionados apenas os artigos com mais de 25 citações na ordem de relevância determinada pelo critério interno do Google (130)
-IEEE (3.748.954 publicações) - (382) Foram selecionados apenas os 50 artigos mais citados, o que equivale a artigos com mais de quatro citações
+Google Acadêmico-Computação (5.350.000 publicações) - (19700) Foram selecionados apenas os artigos com mais de 25 citações na ordem de relevância determinada pelo critério interno do Google (121/130)
+IEEE (3.748.954 publicações) - (382) Foram selecionados apenas os 48/50 artigos mais citados, o que equivale a artigos com mais de quatro citações
+
+10 duplicados foram encontrados automaticamente
 
 A literatura de aprendizado ativo normalmente deixa o cenário baseado em pool implícito.
 Por isso, é necessário excluir os outros cenários na consulta.
@@ -29,7 +70,9 @@ Por isso, é necessário excluir os outros cenários na consulta.
 \section{Aprendizado Ativo}
 Não é do conhecimento do autor nenhuma revisão sistemática sobre aprendizado ativo,
 porém existem revisões convencionais sobre os diferentes cenários e estratégias.
-Tais revisões são usadas para complementar a revisão sistemática.
+Tais revisões são usadas para complementar a revisão sistemática ??.
+
+Primário: fazer uma prospecção da área em busca das estratégias existentes para o cenário baseado em banco de exemplos (pool-based) uma-query-por-vez-e-a-respeito-da-classe monorótulo, com oráculo único, consistente e os exemplos têm custos uniformes com distribuição estacionária.
 
 % mapeamento sistemáticos empregados nesta tese.
 % Esses procedimentos visam a replicabilidade e não-enviesamento só isso?? da
