--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -724,3 +724,81 @@ year = {2006}
   /crossref =   "conf/esann/2010",
   /URL =        "http://www.dice.ucl.ac.be/esann/proceedings/papers.php?ann=2010",
 }
+
+@Book{books/daglib/0097035,
+  title =       "Statistical learning theory",
+  author =      "Vladimir Vapnik",
+  publisher =   "Wiley",
+  year =        "1998",
+  bibdate =     "2011-04-21",
+  ISBN =        "978-0-471-03003-4",
+  pages =       "I--XXIV, 1--736",
+}
+
+@Article{journals/jcss/BalcanBL09,
+  title =       "Agnostic active learning",
+  author =      "Maria-Florina Balcan and Alina Beygelzimer and John
+                 Langford",
+  journal =     "J. Comput. Syst. Sci",
+  year =        "2009",
+  number =      "1",
+  volume =      "75",
+  bibdate =     "2009-05-05",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/jcss/jcss75.html#BalcanBL09",
+  pages =       "78--89",
+  URL =         "http://dx.doi.org/10.1016/j.jcss.2008.07.003",
+}
+
+@InProceedings{conf/pkdd/Shah11,
+  title =       "Generalized Agreement Statistics over Fixed Group of
+                 Experts",
+  author =      "Mohak Shah",
+  bibdate =     "2011-08-22",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/pkdd/pkdd2011-3.html#Shah11",
+  booktitle =   "ECML/PKDD (3)",
+  booktitle =   "Machine Learning and Knowledge Discovery in Databases
+                 - European Conference, {ECML} {PKDD} 2011, Athens,
+                 Greece, September 5-9, 2011, Proceedings, Part {III}",
+  publisher =   "Springer",
+  year =        "2011",
+  volume =      "6913",
+  editor =      "Dimitrios Gunopulos and Thomas Hofmann and Donato
+                 Malerba and Michalis Vazirgiannis",
+  ISBN =        "978-3-642-23807-9",
+  pages =       "191--206",
+  series =      "Lecture Notes in Computer Science",
+  \URL =         "http://dx.doi.org/10.1007/978-3-642-23808-6",
+}
+
+@Article{journals/bmcbi/MassoV10,
+  title =       "Accurate and efficient gp120 {V3} loop structure based
+                 models for the determination of {HIV}-1 co-receptor
+                 usage",
+  author =      "Majid Masso and Iosif I. Vaisman",
+  journal =     "BMC Bioinformatics",
+  year =        "2010",
+  volume =      "11",
+  bibdate =     "2010-11-17",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/bmcbi/bmcbi11.html#MassoV10",
+  pages =       "494",
+  URL =         "http://dx.doi.org/10.1186/1471-2105-11-494",
+}
+
+@Article{journals/sigkdd/HallFHPRW09,
+  title =       "The {WEKA} data mining software: an update",
+  author =      "Mark A. Hall and Eibe Frank and Geoffrey Holmes and
+                 Bernhard Pfahringer and Peter Reutemann and Ian H.
+                 Witten",
+  journal =     "SIGKDD Explorations",
+  year =        "2009",
+  number =      "1",
+  volume =      "11",
+  bibdate =     "2014-09-10",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/sigkdd/sigkdd11.html#HallFHPRW09",
+  pages =       "10--18",
+  URL =         "http://doi.acm.org/10.1145/1656274.1656278",
+}
