--- a/introducao.tex
+++ b/introducao.tex
@@ -313,3 +313,15 @@ enquanto que, para engenharia de \textit{software}, há 203.
 % O plano de trabalho é apresentado no Capítulo \ref{cap:plano} e contempla a situação atual do aluno no programa de doutorado, os recursos disponíveis, as hipóteses formuladas, a metodologia e o cronograma.
 % 
 % Finalmente, no Capítulo \ref{cap:experimentos}, são mostrados experimentos ilustrativos da mudança de conceito e da diversidade de comportamento entre diferentes classificadores.
+
+tema: active learning
+problema: há várias estratégias, como escolher uma delas?
+protocolo de revisão:
+        background: framework teórico; problemática e objetivo
+        questões de pesquisa:
+        estratégia de busca: palavras-chave, sinônimos e relacionadas
+        critérios: tipo de estudo, de inclusão e exclusão
+        seleção: etapas, plano
+        avaliação da qualidade: critérios
+        extração de dados: como, o quê
+        calendário: 
