--- a/macros.tex
+++ b/macros.tex
@@ -18,6 +18,8 @@
 \newcommand{\engl}[2]{\emph{#1}\footnote{\textit{#2}}}
 \newcommand{\novo}[1]{\emph{#1}}
 \newcommand{\eer}{Redução do Erro Esperado\xspace}
+\newcommand{\elms}{Máquinas Extremas\xspace}
+\newcommand{\elm}{Máquina Extrema\xspace}
 
 \newcommand{\tarefa}[1] {\addcontentsline{toc}{section}{\green{\textbf{#1}}}}
 
