--- a/propostas.tex
+++ b/propostas.tex
@@ -1,4 +1,4 @@
-\chapter{Contribuição} \label{cap:contrib}
+\chapter{Contribuição (ou Proposta?)} \label{cap:contrib}
 
 \section{Adaptações de Classificadores}
 \subsection{IELM}
@@ -39,3 +39,8 @@ negativo}
 
 \subsection{Risco}
 \subsection{Tempo de espera tolerável}
+
+
+\section{Metodologia de avaliação}
+\green{A metodologia de avaliação é a mais esperada possivel, mas ainda assim pode ser considerada
+uma contribuição.}
