--- a/experimentos.tex
+++ b/experimentos.tex
@@ -30,12 +30,12 @@ além disso, quand ose sabe o melhor classificador (a não ser por propriedades do
 
 \blue{plotar (log?) rnd (e clu?) p/ nb,c45 e 5nn até o fim do pool ou até atingir passiva, assim serve de panorama do qto as outras estrategias/learners atingiram da ALC possivel)}
 
-\green{rodar eeg-eye-state pra medir tempo nas principais estrategias/learners, pra ser a unica com nintera; rodar como todas as outras: 5x5-fold}
+\green{rodar eeg-eye-state pra medir tempo nas principais estrategias/learners, pra ser a unica base usando nintera que come memória; rodar como todas as outras, mas em 1x10-fold}
 
 \subsubsection{Afinidade estratégia-aprendiz}
 \green{árvore do vencedor accbal e variancia}
 
-\green{árvore do perdedor accbal e variancia}
+\green{árvore do perdedor accbal e variancia (considerar empates? = uma árvore por estrat.?)}
 
 \subsubsection{Comparativo}
 \green{friedmenyi de  accbal e variancia}
@@ -45,7 +45,7 @@ além disso, quand ose sabe o melhor classificador (a não ser por propriedades do
 \green{plotar p/ accBal (apenas nas 85 bases com mais de 200 exemplos?)): \#topos-de-rank X budgets $[10;200]$}
 
 \subsubsection{Aprendizado meta-ativo}
-\green{árvores do vencedor com empate 1-vs-n accbal e variancia}
+\green{ELM treinada com acurácias, mas testada como classificador (accbal e variancia)}
 
 \red{uma base não pode aparecer no cjt de treino e tb no de teste}
 
