--- a/aprendizado-supervisionado.tex
+++ b/aprendizado-supervisionado.tex
@@ -1,10 +1,17 @@
 \section{Contexto}\label{cap:classificacao}
-\blue{vou introduzir classificação em um parágrafo; conectar com AA e esboçar a tese em
-uma folha (desafios e soluções); depois, em outra página, vou deixar clara a principal contribuição
-(provavelmente a meta-estratégia ou a prova empírica da viabilidade do AA, coisa nunca provada com
-a devida análise de risco e com tal robustez estatística)}
 
-\blue{as contribuições secundárias vão ser mencionadas e suas existências vão ser sempre
+\tar{vou introduzir classificação em um parágrafo}
+
+\tar{conectar com AA e esboçar a tese em uma folha (desafios e soluções)}
+
+\tar{em outra página, vou deixar clara a principal contribuição:}
+
+\tar{provavelmente a meta-estratégia ou}
+
+\tar{a prova empírica da viabilidade do AA, coisa nunca provada com
+a devida análise de risco e com tal robustez estatística}
+
+\tar{as contribuições secundárias vão ser mencionadas e suas existências vão ser sempre
 justificadas em função da contribuição principal}
 
 % Algumas habilidades humanas vêm claramente programadas geneticamente e outras são apenas a execução de passos memorizados.
