--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -218,22 +218,6 @@
   \URL =  	"http://jmlr.org/proceedings/papers/v16/",
 }
 
-@Article{journals/sigkdd/HallFHPRW09,
-  title =	"The {WEKA} data mining software: an update",
-  author =	"Mark Hall and Eibe Frank and Geoffrey Holmes and
-		 Bernhard Pfahringer and Peter Reutemann and Ian H.
-		 Witten",
-  journal =	"SIGKDD Explorations",
-  year = 	"2009",
-  number =	"1",
-  volume =	"11",
-  bibdate =	"2010-03-17",
-  bibsource =	"DBLP,
-		 http://dblp.uni-trier.de/db/journals/sigkdd/sigkdd11.html#HallFHPRW09",
-  pages =	"10--18",
-  \URL =  	"http://doi.acm.org/10.1145/1656274.1656278",
-}
-
 @InProceedings{conf/ecml/KornerW06,
   title =	"Multi-class Ensemble-Based Active Learning",
   author =	"Christine K{\"o}rner and Stefan Wrobel",
@@ -801,4 +785,13 @@ year = {2006}
                  http://dblp.uni-trier.de/db/journals/sigkdd/sigkdd11.html#HallFHPRW09",
   pages =       "10--18",
   URL =         "http://doi.acm.org/10.1145/1656274.1656278",
+}
+
+@article{settles2010active,
+  title={Active learning literature survey},
+  author={Settles, Burr},
+  journal={University of Wisconsin, Madison},
+  volume={52},
+  pages={55--66},
+  year={2010}
 }
