--- a/macros.tex
+++ b/macros.tex
@@ -10,18 +10,21 @@
 \newcommand{\Ut}{\U_{(t)}\xspace}
 \newcommand{\Lt}{\mathcal{L}_{(t)}\xspace}
 \newcommand{\tra}[2]{\underline{#1}\xspace\footnote{\textit{#2}\xspace}}
-% \newcommand{\ing}[1]{\textit{#1}\xspace}
 \newcommand{\blue}[1]{\textcolor{blue}{#1}\xspace}
 \newcommand{\red}[1]{\textcolor{red}{#1}\xspace}
 \newcommand{\green}[1]{\textcolor{dark-green}{#1}\xspace}
+\newcommand{\esb}[1]{\blue{#1}\xspace}
+\newcommand{\ano}[1]{\red{[$\star$ #1 $\star$]}\xspace}
+\newcommand{\tar}[1]{\green{$\star$ #1}\xspace}
 
-\newcommand{\engl}[2]{\emph{#1}\footnote{\textit{#2}}}
+
+\newcommand{\ing}[2]{\emph{#1}\footnote{\textit{#2}}}
 \newcommand{\novo}[1]{\emph{#1}}
 \newcommand{\eer}{Redução do Erro Esperado\xspace}
 \newcommand{\elms}{Máquinas Extremas\xspace}
 \newcommand{\elm}{Máquina Extrema\xspace}
 
-\newcommand{\tarefa}[1] {\addcontentsline{toc}{section}{\green{\textbf{#1}}}}
+\newcommand{\tarefa}[1] {\addcontentsline{toc}{section}{\tar{#1}}}
 
 
 
